<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddBookF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_book_text"
        android:textColor="#F0F0F4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:hint="@string/book_name_hint"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textColorHint="#716F71"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/author_hint"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:textColorHint="#716F71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_name"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/book_publication_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/publication_date_hint"
        android:inputType="date"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textColorHint="#716F71"
        android:clickable="true"
        android:layout_margin="14dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_author"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/book_amount_page"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_page_hint"
        android:textColorHint="#716F71"
        android:textSize="22sp"
        android:inputType="number"
        android:layout_margin="10dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_publication_date"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/book_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:textSize="22sp"
        android:textColorHint="#716F71"
        android:inputType="number"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_amount_page"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/book_place"
        android:textColorHint="#716F71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/place_hint"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_amount"
        app:layout_constraintVertical_bias="0.056" />

    <Spinner
        android:id="@+id/genre_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_place" />

    <Button
        android:id="@+id/add_book_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/add_book_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_select" />

</androidx.constraintlayout.widget.ConstraintLayout>